Implement core features and update styles

--- a/index.html
+++ b/index.html
@@ -1,14 +1,45 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello World</title>
-  <link href='/style.css' rel='stylesheet'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>한국 도자기</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&family=Noto+Sans+KR&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <button onclick="console.log('hello');">Press me</button>
-  <script defer type="text/javascript" src="/main.js"></script>
+    <header>
+        <h1>한국 도자기</h1>
+        <nav>
+            <ul>
+                <li><a href="#">홈</a></li>
+                <li><a href="#">제품</a></li>
+                <li><a href="#">소개</a></li>
+                <li><a href="#">문의</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="hero">
+            <h2>아름다운 한국의 미</h2>
+            <p>전통과 현대가 어우러진 특별한 도자기를 만나보세요.</p>
+        </section>
+
+        <section class="products">
+            <h2>추천 제품</h2>
+            <div class="product-grid">
+                <product-card name="청자 상감 운학문 매병" price="350,000원" image="https://images.unsplash.com/photo-1578973625969-8e12d4d124d7?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"></product-card>
+                <product-card name="백자 달항아리" price="550,000원" image="https://images.unsplash.com/photo-1615325852939-715c5a894a4a?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"></product-card>
+                <product-card name="분청사기 박지철채화문 병" price="280,000원" image="https://images.unsplash.com/photo-1578973625969-8e12d4d124d7?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"></product-card>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 한국 도자기</p>
+    </footer>
+
+    <script src="main.js"></script>
 </body>
 </html>
