Add dark/light mode toggle and update styles

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <header>
         <h1>한국 도자기</h1>
+        <div class="theme-toggle">
+            <button id="theme-btn">다크 모드</button>
+        </div>
         <nav>
             <ul>
                 <li><a href="#">홈</a></li>
