Add real-time clock to header

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 <body>
     <header>
         <h1>한국 도자기</h1>
-        <div class="theme-toggle">
-            <button id="theme-btn">다크 모드</button>
+        <div class="header-controls">
+            <div id="clock" class="clock"></div>
+            <div class="theme-toggle">
+                <button id="theme-btn">다크 모드</button>
+            </div>
         </div>
         <nav>
             <ul>
