--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
     <header>
         <h1 data-i18n="logo">한국 도자기</h1>
         <div class="header-controls">
-            <div id="clock" class="clock"></div>
+            <div class="clock-container">
+                <div id="analog-clock" class="analog-clock">
+                    <div class="hand hour" id="hour-hand"></div>
+                    <div class="hand minute" id="minute-hand"></div>
+                    <div class="hand second" id="second-hand"></div>
+                    <div class="center-dot"></div>
+                </div>
+            </div>
             <div class="language-selector">
                 <button class="lang-btn" data-lang="ko">KR</button>
                 <button class="lang-btn" data-lang="en">EN</button>
