Add Google Analytics tag to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title data-i18n="page_title">한국 도자기</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&family=Noto+Sans+KR&display=swap" rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2790KD3NZ1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-2790KD3NZ1');
+    </script>
 </head>
 <body>
     <header>
