Implement product detail view with descriptions

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
                 <!-- Products will be dynamically rendered for i18n support -->
             </div>
         </section>
+
+        <section id="product-detail" class="product-detail" style="display: none;">
+            <!-- Product details will be dynamically rendered -->
+        </section>
     </main>
 
     <footer>
