feat: optimize SEO for Google and Naver with meta tags, JSON-LD, and sitemap

--- a/index.html
+++ b/index.html
@@ -3,7 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-i18n="page_title">한국 도자기</title>
+    <title data-i18n="page_title">한국 도자기 - 전통과 현대의 조화</title>
+    <meta name="description" content="아름다운 한국 전통 도자기와 현대적 감각의 만남. 청자, 백자, 분청사기 등 고품격 도자기 제품을 만나보세요.">
+    <meta name="keywords" content="한국 도자기, 청자, 백자, 분청사기, 전통 공예, 도자기 쇼핑몰, 인테리어 소품">
+    <link rel="canonical" href="https://product-builder1-7f0.pages.dev/">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://product-builder1-7f0.pages.dev/">
+    <meta property="og:title" content="한국 도자기 - 전통과 현대의 조화">
+    <meta property="og:description" content="아름다운 한국 전통 도자기와 현대적 감각의 만남. 청자, 백자, 분청사기 등 고품격 도자기 제품을 만나보세요.">
+    <meta property="og:image" content="https://product-builder1-7f0.pages.dev/images/og-main.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://product-builder1-7f0.pages.dev/">
+    <meta property="twitter:title" content="한국 도자기 - 전통과 현대의 조화">
+    <meta property="twitter:description" content="아름다운 한국 전통 도자기와 현대적 감각의 만남. 청자, 백자, 분청사기 등 고품격 도자기 제품을 만나보세요.">
+    <meta property="twitter:image" content="https://product-builder1-7f0.pages.dev/images/og-main.jpg">
+
+    <!-- Naver specific -->
+    <meta name="naver-site-verification" content="your-verification-code">
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "한국 도자기",
+      "url": "https://product-builder1-7f0.pages.dev/",
+      "logo": "https://product-builder1-7f0.pages.dev/favicon.svg",
+      "description": "아름다운 한국 전통 도자기와 현대적 감각의 만남을 전하는 전문 브랜드입니다.",
+      "sameAs": [
+        "https://www.instagram.com/korean_pottery",
+        "https://www.facebook.com/koreanpottery"
+      ]
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [{
+        "@type": "ListItem",
+        "position": 1,
+        "name": "홈",
+        "item": "https://product-builder1-7f0.pages.dev/"
+      },{
+        "@type": "ListItem",
+        "position": 2,
+        "name": "제품",
+        "item": "https://product-builder1-7f0.pages.dev/#products"
+      }]
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ItemList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "청자 상감 운학문 매병",
+          "url": "https://product-builder1-7f0.pages.dev/#product-1"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "백자 달항아리",
+          "url": "https://product-builder1-7f0.pages.dev/#product-2"
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "name": "분청사기 박지철채화문 병",
+          "url": "https://product-builder1-7f0.pages.dev/#product-3"
+        }
+      ]
+    }
+    </script>
+
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&family=Noto+Sans+KR&display=swap" rel="stylesheet">
@@ -64,6 +144,19 @@
         <section class="products">
             <h2 data-i18n="products_title">추천 제품</h2>
             <div class="product-grid" id="product-list">
+                <!-- Static product list for SEO crawlers -->
+                <article class="seo-only" style="display: none;">
+                    <h3>청자 상감 운학문 매병</h3>
+                    <p>고려 시대의 대표적인 청자, 상감 기법으로 표현된 구름과 학.</p>
+                </article>
+                <article class="seo-only" style="display: none;">
+                    <h3>백자 달항아리</h3>
+                    <p>보름달처럼 둥글고 넉넉한 형태의 조선 시대 백자.</p>
+                </article>
+                <article class="seo-only" style="display: none;">
+                    <h3>분청사기 박지철채화문 병</h3>
+                    <p>자유분방하고 해학적인 아름다움을 지닌 분청사기.</p>
+                </article>
                 <!-- Products will be dynamically rendered for i18n support -->
             </div>
         </section>
