--- a/index.html
+++ b/index.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-i18n="page_title">한국 도자기 - 전통과 현대의 조화</title>
-    <meta name="description" content="아름다운 한국 전통 도자기와 현대적 감각의 만남. 청자, 백자, 분청사기 등 고품격 도자기 제품을 만나보세요.">
-    <meta name="keywords" content="한국 도자기, 청자, 백자, 분청사기, 전통 공예, 도자기 쇼핑몰, 인테리어 소품">
-    <link rel="canonical" href="https://product-builder1-7f0.pages.dev/">
-    
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://product-builder1-7f0.pages.dev/">
-    <meta property="og:title" content="한국 도자기 - 전통과 현대의 조화">
-    <meta property="og:description" content="아름다운 한국 전통 도자기와 현대적 감각의 만남. 청자, 백자, 분청사기 등 고품격 도자기 제품을 만나보세요.">
-    <meta property="og:image" content="https://product-builder1-7f0.pages.dev/images/og-main.jpg">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title data-i18n="page_title">한국 도자기 - 전통과 현대의 조화 | 청자, 백자, 분청사기</title>
+  <meta name="description" content="아름다운 한국 전통 도자기와 현대적 감각의 만남. 청자 상감 운학문 매병, 백자 달항아리, 분청사기 등 고품격 도자기 제품을 만나보세요.">
+  <meta name="keywords" content="한국 도자기, 청자, 백자, 분청사기, 전통 공예, 도자기 쇼핑몰, 인테리어 소품">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://product-builder1-7f0.pages.dev/">
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://product-builder1-7f0.pages.dev/">
-    <meta property="twitter:title" content="한국 도자기 - 전통과 현대의 조화">
-    <meta property="twitter:description" content="아름다운 한국 전통 도자기와 현대적 감각의 만남. 청자, 백자, 분청사기 등 고품격 도자기 제품을 만나보세요.">
-    <meta property="twitter:image" content="https://product-builder1-7f0.pages.dev/images/og-main.jpg">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://product-builder1-7f0.pages.dev/">
+  <meta property="og:title" content="한국 도자기 - 전통과 현대의 조화 | 청자, 백자, 분청사기">
+  <meta property="og:description"
+    content="아름다운 한국 전통 도자기와 현대적 감각의 만남. 청자 상감 운학문 매병, 백자 달항아리, 분청사기 등 고품격 도자기 제품을 만나보세요.">
+  <meta property="og:image" content="https://product-builder1-7f0.pages.dev/images/og-main.jpg">
 
-    <!-- Naver specific -->
-    <meta name="naver-site-verification" content="your-verification-code">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="product-builder1-7f0.pages.dev">
+  <meta property="twitter:url" content="https://product-builder1-7f0.pages.dev/">
+  <meta name="twitter:title" content="한국 도자기 - 전통과 현대의 조화 | 청자, 백자, 분청사기">
+  <meta name="twitter:description"
+    content="아름다운 한국 전통 도자기와 현대적 감각의 만남. 청자 상감 운학문 매병, 백자 달항아리, 분청사기 등 고품격 도자기 제품을 만나보세요.">
+  <meta name="twitter:image" content="https://product-builder1-7f0.pages.dev/images/og-main.jpg">
 
-    <!-- Structured Data (JSON-LD) -->
-    <script type="application/ld+json">
+  <!-- Naver specific -->
+  <meta name="naver-site-verification" content="your-verification-code">
+
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "Organization",
@@ -40,7 +45,7 @@
       ]
     }
     </script>
-    <script type="application/ld+json">
+  <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "BreadcrumbList",
@@ -57,7 +62,7 @@
       }]
     }
     </script>
-    <script type="application/ld+json">
+  <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "ItemList",
@@ -84,92 +89,110 @@
     }
     </script>
 
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&family=Noto+Sans+KR&display=swap" rel="stylesheet">
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2790KD3NZ1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&family=Noto+Sans+KR&display=swap"
+    rel="stylesheet">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2790KD3NZ1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-      gtag('config', 'G-2790KD3NZ1');
-    </script>
-    <script type="text/javascript">
-        (function(c,l,a,r,i,t,y){
-            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-        })(window, document, "clarity", "script", "vnb779ddsg");
-    </script>
+    gtag('config', 'G-2790KD3NZ1');
+  </script>
+  <script type="text/javascript">
+    (function (c, l, a, r, i, t, y) {
+      c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
+      t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
+      y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
+    })(window, document, "clarity", "script", "vnb779ddsg");
+  </script>
 </head>
+
 <body>
-    <header>
-        <h1 data-i18n="logo">한국 도자기</h1>
-        <div class="header-controls">
-            <div class="clock-container">
-                <div id="analog-clock" class="analog-clock">
-                    <div class="hand hour" id="hour-hand"></div>
-                    <div class="hand minute" id="minute-hand"></div>
-                    <div class="hand second" id="second-hand"></div>
-                    <div class="center-dot"></div>
-                </div>
-            </div>
-            <div class="language-selector">
-                <button class="lang-btn" data-lang="ko">KR</button>
-                <button class="lang-btn" data-lang="en">EN</button>
-                <button class="lang-btn" data-lang="ja">JP</button>
-            </div>
-            <div class="theme-toggle">
-                <button id="theme-btn" data-i18n="theme_dark">다크 모드</button>
-            </div>
+  <header>
+    <h1 data-i18n="logo">한국 도자기</h1>
+    <div class="header-controls">
+      <div class="clock-container">
+        <div id="analog-clock" class="analog-clock">
+          <div class="hand hour" id="hour-hand"></div>
+          <div class="hand minute" id="minute-hand"></div>
+          <div class="hand second" id="second-hand"></div>
+          <div class="center-dot"></div>
         </div>
-        <nav>
-            <ul>
-                <li><a href="#" data-i18n="nav_home">홈</a></li>
-                <li><a href="#" data-i18n="nav_products">제품</a></li>
-                <li><a href="#" data-i18n="nav_about">소개</a></li>
-                <li><a href="#" data-i18n="nav_contact">문의</a></li>
-            </ul>
-        </nav>
-    </header>
+      </div>
+      <div class="language-selector">
+        <button class="lang-btn" data-lang="ko">KR</button>
+        <button class="lang-btn" data-lang="en">EN</button>
+        <button class="lang-btn" data-lang="ja">JP</button>
+      </div>
+      <div class="theme-toggle">
+        <button id="theme-btn" data-i18n="theme_dark">다크 모드</button>
+      </div>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#" data-i18n="nav_home">홈</a></li>
+        <li><a href="#" data-i18n="nav_products">제품</a></li>
+        <li><a href="#" data-i18n="nav_about">소개</a></li>
+        <li><a href="#" data-i18n="nav_contact">문의</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <main>
-        <section class="hero">
-            <h2 data-i18n="hero_title">아름다운 한국의 미</h2>
-            <p data-i18n="hero_subtitle">전통과 현대가 어우러진 특별한 도자기를 만나보세요.</p>
-        </section>
+  <main>
+    <section class="hero">
+      <h2 data-i18n="hero_title">아름다운 한국의 미</h2>
+      <p data-i18n="hero_subtitle">전통과 현대가 어우러진 특별한 도자기를 만나보세요.</p>
+    </section>
 
-        <section class="products">
-            <h2 data-i18n="products_title">추천 제품</h2>
-            <div class="product-grid" id="product-list">
-                <!-- Static product list for SEO crawlers -->
-                <article class="seo-only" style="display: none;">
-                    <h3>청자 상감 운학문 매병</h3>
-                    <p>고려 시대의 대표적인 청자, 상감 기법으로 표현된 구름과 학.</p>
-                </article>
-                <article class="seo-only" style="display: none;">
-                    <h3>백자 달항아리</h3>
-                    <p>보름달처럼 둥글고 넉넉한 형태의 조선 시대 백자.</p>
-                </article>
-                <article class="seo-only" style="display: none;">
-                    <h3>분청사기 박지철채화문 병</h3>
-                    <p>자유분방하고 해학적인 아름다움을 지닌 분청사기.</p>
-                </article>
-                <!-- Products will be dynamically rendered for i18n support -->
-            </div>
-        </section>
+    <section class="products">
+      <h2 data-i18n="products_title">추천 제품</h2>
+      <div class="product-grid" id="product-list">
+        <!-- Static product list for SEO crawlers -->
+        <article>
+          <a href="https://product-builder1-7f0.pages.dev/#product-1">
+            <img src="https://images.unsplash.com/photo-1578973625969-8e12d4d124d7?q=80&w=1974&auto=format&fit=crop"
+              alt="청자 상감 운학문 매병">
+            <h3>청자 상감 운학문 매병</h3>
+          </a>
+          <p>고려 시대의 대표적인 청자, 상감 기법으로 표현된 구름과 학.</p>
+          <span>350,000원</span>
+        </article>
+        <article>
+          <a href="https://product-builder1-7f0.pages.dev/#product-2">
+            <img src="https://images.unsplash.com/photo-1615325852939-715c5a894a4a?q=80&w=2070&auto=format&fit=crop"
+              alt="백자 달항아리">
+            <h3>백자 달항아리</h3>
+          </a>
+          <p>보름달처럼 둥글고 넉넉한 형태의 조선 시대 백자.</p>
+          <span>550,000원</span>
+        </article>
+        <article>
+          <a href="https://product-builder1-7f0.pages.dev/#product-3">
+            <img src="https://images.unsplash.com/photo-1578973625969-8e12d4d124d7?q=80&w=1974&auto=format&fit=crop"
+              alt="분청사기 박지철채화문 병">
+            <h3>분청사기 박지철채화문 병</h3>
+          </a>
+          <p>자유분방하고 해학적인 아름다움을 지닌 분청사기.</p>
+          <span>280,000원</span>
+        </article>
+        <!-- Products will be dynamically rendered for i18n support -->
+      </div>
+    </section>
 
-        <section id="product-detail" class="product-detail" style="display: none;">
-            <!-- Product details will be dynamically rendered -->
-        </section>
-    </main>
+    <section id="product-detail" class="product-detail" style="display: none;">
+      <!-- Product details will be dynamically rendered -->
+    </section>
+  </main>
 
-    <footer>
-        <p>&copy; 2024 <span data-i18n="footer_name">한국 도자기</span></p>
-    </footer>
+  <footer>
+    <p>&copy; 2024 <span data-i18n="footer_name">한국 도자기</span></p>
+  </footer>
 
-    <script src="main.js"></script>
+  <script src="main.js"></script>
 </body>
+
 </html>
