feat: apply GEO optimizations (FAQ, E-E-A-T, Schema)

--- a/index.html
+++ b/index.html
@@ -70,22 +70,76 @@
         {
           "@type": "ListItem",
           "position": 1,
-          "name": "청자 상감 운학문 매병",
-          "url": "https://product-builder1-7f0.pages.dev/#product-1"
+          "item": {
+            "@type": "Product",
+            "name": "청자 상감 운학문 매병",
+            "url": "https://product-builder1-7f0.pages.dev/#product-1",
+            "image": "https://images.unsplash.com/photo-1578973625969-8e12d4d124d7",
+            "description": "고려 시대의 대표적인 청자, 상감 기법으로 표현된 구름과 학무늬가 아름다운 화병입니다.",
+            "offers": {
+              "@type": "Offer",
+              "priceCurrency": "KRW",
+              "price": "350000",
+              "availability": "https://schema.org/InStock"
+            }
+          }
         },
         {
           "@type": "ListItem",
           "position": 2,
-          "name": "백자 달항아리",
-          "url": "https://product-builder1-7f0.pages.dev/#product-2"
+          "item": {
+            "@type": "Product",
+            "name": "백자 달항아리",
+            "url": "https://product-builder1-7f0.pages.dev/#product-2",
+            "image": "https://images.unsplash.com/photo-1615325852939-715c5a894a4a",
+            "description": "보름달처럼 둥글고 넉넉한 형태의 조선 시대 백자 달항아리입니다.",
+            "offers": {
+              "@type": "Offer",
+              "priceCurrency": "KRW",
+              "price": "550000",
+              "availability": "https://schema.org/InStock"
+            }
+          }
         },
         {
           "@type": "ListItem",
           "position": 3,
-          "name": "분청사기 박지철채화문 병",
-          "url": "https://product-builder1-7f0.pages.dev/#product-3"
+          "item": {
+            "@type": "Product",
+            "name": "분청사기 박지철채화문 병",
+            "url": "https://product-builder1-7f0.pages.dev/#product-3",
+            "image": "https://images.unsplash.com/photo-1578973625969-8e12d4d124d7",
+            "description": "자유분방하고 해학적인 아름다움을 지닌 한국 전통 분청사기 화병입니다.",
+            "offers": {
+              "@type": "Offer",
+              "priceCurrency": "KRW",
+              "price": "280000",
+              "availability": "https://schema.org/InStock"
+            }
+          }
         }
       ]
+    }
+    </script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [{
+        "@type": "Question",
+        "name": "한국 도자기란 무엇인가요?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "한국 도자기는 흙을 빚어 구워 만든 한국의 전통 공예품입니다. 크게 고려 시대의 맑은 비취색을 띠는 청자, 조선 시대의 깨끗하고 단아한 백자, 그리고 소박하고 자유로운 형태의 분청사기로 나뉩니다."
+        }
+      },{
+        "@type": "Question",
+        "name": "달항아리의 특징은 무엇인가요?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "백자 달항아리는 보름달처럼 둥글고 넉넉한 형태가 특징인 조선 시대의 도자기입니다. 꾸밈없고 순백의 아름다움을 지녀 완벽함보다는 자연스러운 여유를 상징합니다."
+        }
+      }]
     }
     </script>
 
@@ -148,6 +202,16 @@
       <p data-i18n="hero_subtitle">전통과 현대가 어우러진 특별한 도자기를 만나보세요.</p>
     </section>
 
+    <!-- Expertise and Trust (E-E-A-T) Section -->
+    <section class="expertise" id="about-expertise">
+      <h2 data-i18n="expertise_title">전통을 잇는 장인 정신</h2>
+      <div class="expertise-content">
+        <p>한국 도자기는 <strong>고려 시대의 유려한 청자</strong>부터 <strong>조선 시대의 담백한 백자</strong>까지, 수백 년간 이어져 온 한국 고유의 예술품입니다.</p>
+        <p>엄선된 흙과 전통 가마 방식을 고집하는 장인들의 손길을 거쳐, 현대적인 식탁과 인테리어에도 완벽하게 어우러지는 최고 품질의 작품만을 선보입니다. 우리의 도자기는 단순한 그릇을 넘어 세대를 이어갈
+          가치를 전달합니다.</p>
+      </div>
+    </section>
+
     <section class="products">
       <h2 data-i18n="products_title">추천 제품</h2>
       <div class="product-grid" id="product-list">
@@ -155,28 +219,28 @@
         <article>
           <a href="https://product-builder1-7f0.pages.dev/#product-1">
             <img src="https://images.unsplash.com/photo-1578973625969-8e12d4d124d7?q=80&w=1974&auto=format&fit=crop"
-              alt="청자 상감 운학문 매병">
+              alt="전통 무늬가 새겨진 고려 청자 상감 운학문 매병">
             <h3>청자 상감 운학문 매병</h3>
           </a>
-          <p>고려 시대의 대표적인 청자, 상감 기법으로 표현된 구름과 학.</p>
+          <p>고려 시대의 대표적인 청자, 상감 기법으로 표현된 구름과 학무늬가 아름다운 화병입니다.</p>
           <span>350,000원</span>
         </article>
         <article>
           <a href="https://product-builder1-7f0.pages.dev/#product-2">
             <img src="https://images.unsplash.com/photo-1615325852939-715c5a894a4a?q=80&w=2070&auto=format&fit=crop"
-              alt="백자 달항아리">
+              alt="보름달처럼 둥글고 여유로운 조선 백자 달항아리">
             <h3>백자 달항아리</h3>
           </a>
-          <p>보름달처럼 둥글고 넉넉한 형태의 조선 시대 백자.</p>
+          <p>보름달처럼 둥글고 넉넉한 형태의 조선 시대 백자 달항아리입니다.</p>
           <span>550,000원</span>
         </article>
         <article>
           <a href="https://product-builder1-7f0.pages.dev/#product-3">
             <img src="https://images.unsplash.com/photo-1578973625969-8e12d4d124d7?q=80&w=1974&auto=format&fit=crop"
-              alt="분청사기 박지철채화문 병">
+              alt="무늬가 독특한 한국 전통 분청사기 화병">
             <h3>분청사기 박지철채화문 병</h3>
           </a>
-          <p>자유분방하고 해학적인 아름다움을 지닌 분청사기.</p>
+          <p>자유분방하고 해학적인 아름다움을 지닌 한국 전통 분청사기 화병입니다.</p>
           <span>280,000원</span>
         </article>
         <!-- Products will be dynamically rendered for i18n support -->
@@ -185,6 +249,22 @@
 
     <section id="product-detail" class="product-detail" style="display: none;">
       <!-- Product details will be dynamically rendered -->
+    </section>
+
+    <!-- FAQ Section optimized for Generative Engines -->
+    <section class="faq" id="faq">
+      <h2 data-i18n="faq_title">자주 묻는 질문 (FAQ)</h2>
+      <div class="faq-list">
+        <article class="faq-item">
+          <h3>한국 도자기란 무엇인가요?</h3>
+          <p>한국 도자기는 흙을 빚어 구워 만든 한국의 전통 공예품입니다. 크게 고려 시대의 맑은 비취색을 띠는 청자, 조선 시대의 깨끗하고 단아한 백자, 그리고 소박하고 자유로운 형태의 분청사기로
+            나뉩니다.</p>
+        </article>
+        <article class="faq-item">
+          <h3>달항아리의 특징은 무엇인가요?</h3>
+          <p>백자 달항아리는 보름달처럼 둥글고 넉넉한 형태가 특징인 조선 시대의 도자기입니다. 꾸밈없고 순백의 아름다움을 지녀 완벽함보다는 자연스러운 여유를 상징합니다.</p>
+        </article>
+      </div>
     </section>
   </main>
 
