feat: add English to coming soon overlay

--- a/index.html
+++ b/index.html
@@ -182,8 +182,9 @@
   <!-- Coming Soon Overlay -->
   <div id="coming-soon-overlay">
     <div class="coming-soon-content">
-      <h2 data-i18n="coming_soon_title">사이트 준비 중입니다</h2>
-      <p data-i18n="coming_soon_desc">더 나은 모습으로 찾아뵙겠습니다.</p>
+      <h2 data-i18n="coming_soon_title">사이트 준비 중입니다 / Coming Soon</h2>
+      <p data-i18n="coming_soon_desc" style="margin-bottom: 0.5rem;">더 나은 모습으로 찾아뵙겠습니다.</p>
+      <p style="font-size: 1rem; opacity: 0.7;">We will be back soon with a better version.</p>
     </div>
   </div>
   <header>
