feat: replace theme toggle with segmented control

--- a/index.html
+++ b/index.html
@@ -195,8 +195,10 @@
         <button class="lang-btn" data-lang="en">EN</button>
         <button class="lang-btn" data-lang="ja">JP</button>
       </div>
-      <div class="theme-toggle">
-        <button id="theme-btn" data-i18n="theme_dark">다크 모드</button>
+      <div class="theme-selector">
+        <button class="theme-btn" data-theme-val="light" data-i18n="theme_short_light">라이트</button>
+        <button class="theme-btn" data-theme-val="dark" data-i18n="theme_short_dark">다크</button>
+        <button class="theme-btn" data-theme-val="system" data-i18n="theme_short_system">자동</button>
       </div>
     </div>
     <nav>
